fix: basic dark mode

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5,10 +5,6 @@
     --color-accent: var(--accent);
 }
 
-:root {
-    color-scheme: light;
-}
-
 body.page-photo header,
 body.page-general header {
     @apply hidden md:flex;
